--- a/comsci.html
+++ b/comsci.html
@@ -3,10 +3,39 @@
 <head>
 <title>Computer Science (C Red)</title>
 <link href="classes.css" rel="stylesheet">
+  <div class="title">
+    <h1>Computer Science</h1>
+  </div>
 </head>
-<body>
+<body>			
+
+  <br><br>
+  
+<!-- ----------------------------------------- -->
+
+<div class="reminders">
+
+  <span class="remindertitle">
+    <h1>Reminders:</h1>
+  </span>
+
+  <p>Bring in mouse for chromebook.</p>
+
+</div>
+
+<!-- ------------------------------------------ -->
+
+<div class="notes">
 
 
+</div>
+
+<!-- ----------------------------------------- -->
+
+<div class="questions">
+
+
+</div>
 
 </body>
 </html>
